--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /tmp/
 /test/dummy/db/*.sqlite3
 /test/dummy/db/*.sqlite3-*
+/test/dummy/db/schema.rb
 /test/dummy/log/*.log
 /test/dummy/storage/
 /test/dummy/tmp/
