--- a/test/dummy/config/database.yml
+++ b/test/dummy/config/database.yml
@@ -16,15 +16,15 @@ default: &default
 
 development:
   <<: *default
-  database: full_metal_body_development
+  database: full_metal_body_development_<%= Rails.version.gsub(/\./, '_') %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: full_metal_body_test
+  database: full_metal_body_test_<%= Rails.version.gsub(/\./, '_') %>
 
 production:
   <<: *default
-  database: full_metal_body_production
+  database: full_metal_body_production_<%= Rails.version.gsub(/\./, '_') %>
